refactor: server side code

--- a/src/server/.env_example
+++ b/src/server/.env_example
@@ -1,9 +1,10 @@
-PORT=8000
-ENV=development
-DB_HOST=
-DB_USERNAME=
-DB_PASSWORD=
-JWT_SECRET=
-BASE_URL=
-CONTENT_URL="https://www.gutenberg.org/files"
-METADATA_URL="https://www.gutenberg.org/ebooks"
+HOST=HOST
+PORT=PORT
+SECRET_KEY=SECRET_KEY
+FRONTEND_ORIGIN=FRONTEND_ORIGIN
+DB_HOST=DB_HOST
+DB_NAME=DB_NAME
+DB_USERNAME=DB_USERNAME
+DB_PASSWORD=DB_PASSWORD
+GUTENBERG_CONTENT_URL=GUTENBERG_CONTENT_URL
+GUTENBERG_METADATA_URL=GUTENBERG_METADATA_URL
