--- a/src/server/requirements.txt
+++ b/src/server/requirements.txt
@@ -54,6 +54,7 @@ propcache==0.2.0
 psutil==6.1.0
 psycopg2==2.9.10
 pydantic==2.9.2
+pydantic-settings==2.6.0
 pydantic_core==2.23.4
 python-dotenv==1.0.1
 PyYAML==6.0.2
